.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
15:35:10 **** Incremental Build of configuration Debug for project claseStruct ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\claseStruct.o" "..\\src\\claseStruct.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\utn.o" "..\\src\\utn.c" 
..\src\utn.c: In function 'cargarArrayInt':
..\src\utn.c:83:6: warning: implicit declaration of function 'getNumber'; did you mean 'isNumber'? [-Wimplicit-function-declaration]
   83 |   if(getNumber(&buffer,"Ingrese un número\n","ERROR\n",1,115,2))
      |      ^~~~~~~~~
      |      isNumber
..\src\utn.c: In function 'getString':
..\src\utn.c:310:15: error: 'MAX_ARRAY_CHAR' undeclared (first use in this function)
  310 |  char buffer [MAX_ARRAY_CHAR];
      |               ^~~~~~~~~~~~~~
..\src\utn.c:310:15: note: each undeclared identifier is reported only once for each function it appears in
..\src\utn.c:310:7: warning: unused variable 'buffer' [-Wunused-variable]
  310 |  char buffer [MAX_ARRAY_CHAR];
      |       ^~~~~~
15:38:03 **** Incremental Build of configuration Debug for project claseStruct ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\validation.o" "..\\src\\validation.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\utn.o" "..\\src\\utn.c" 
..\src\utn.c: In function 'cargarArrayInt':
..\src\utn.c:83:6: warning: implicit declaration of function 'getNumber'; did you mean 'isNumber'? [-Wimplicit-function-declaration]
   83 |   if(getNumber(&buffer,"Ingrese un número\n","ERROR\n",1,115,2))
      |      ^~~~~~~~~
      |      isNumber
..\src\utn.c: In function 'getString':
..\src\utn.c:291:15: error: 'MAX_ARRAY_CHAR' undeclared (first use in this function)
  291 |  char buffer [MAX_ARRAY_CHAR];
      |               ^~~~~~~~~~~~~~
..\src\utn.c:291:15: note: each undeclared identifier is reported only once for each function it appears in
..\src\utn.c:291:7: warning: unused variable 'buffer' [-Wunused-variable]
  291 |  char buffer [MAX_ARRAY_CHAR];
      |       ^~~~~~
15:38:59 **** Incremental Build of configuration Debug for project claseStruct ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\utn.o" "..\\src\\utn.c" 
..\src\utn.c: In function 'cargarArrayInt':
..\src\utn.c:83:6: warning: implicit declaration of function 'getNumber'; did you mean 'isNumber'? [-Wimplicit-function-declaration]
   83 |   if(getNumber(&buffer,"Ingrese un número\n","ERROR\n",1,115,2))
      |      ^~~~~~~~~
      |      isNumber
gcc -o claseStruct "src\\claseStruct.o" "src\\utn.o" "src\\validation.o" 
15:39:23 **** Incremental Build of configuration Debug for project claseStruct ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\utn.o" "..\\src\\utn.c" 
..\src\utn.c: In function 'cargarArrayInt':
..\src\utn.c:83:6: warning: implicit declaration of function 'getNumber'; did you mean 'isNumber'? [-Wimplicit-function-declaration]
   83 |   if(getNumber(&buffer,"Ingrese un número\n","ERROR\n",1,115,2))
      |      ^~~~~~~~~
      |      isNumber
gcc -o claseStruct "src\\claseStruct.o" "src\\utn.o" "src\\validation.o" 
15:40:52 **** Incremental Build of configuration Debug for project claseStruct ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\utn.o" "..\\src\\utn.c" 
..\src\utn.c: In function 'cargarArrayInt':
..\src\utn.c:82:6: warning: implicit declaration of function 'getNumber'; did you mean 'isNumber'? [-Wimplicit-function-declaration]
   82 |   if(getNumber(&buffer,"Ingrese un número\n","ERROR\n",1,115,2))
      |      ^~~~~~~~~
      |      isNumber
gcc -o claseStruct "src\\claseStruct.o" "src\\utn.o" "src\\validation.o" 
15:42:06 **** Incremental Build of configuration Debug for project claseStruct ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\validation.o" "..\\src\\validation.c" 
gcc -o claseStruct "src\\claseStruct.o" "src\\utn.o" "src\\validation.o" 
Info: Nothing to build for claseStruct
15:43:27 **** Incremental Build of configuration Debug for project claseStruct ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\validation.o" "..\\src\\validation.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\claseStruct.o" "..\\src\\claseStruct.c" 
gcc -o claseStruct "src\\claseStruct.o" "src\\utn.o" "src\\validation.o" 
Info: Nothing to build for claseStruct
15:45:36 **** Incremental Build of configuration Debug for project claseStruct ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\claseStruct.o" "..\\src\\claseStruct.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\utn.o" "..\\src\\utn.c" 
..\src\utn.c: In function 'cargarArrayInt':
..\src\utn.c:82:6: warning: implicit declaration of function 'getNumber'; did you mean 'isNumber'? [-Wimplicit-function-declaration]
   82 |   if(getNumber(&buffer,"Ingrese un número\n","ERROR\n",1,115,2))
      |      ^~~~~~~~~
      |      isNumber
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\validation.o" "..\\src\\validation.c" 
..\src\validation.c: In function 'getInt':
..\src\validation.c:65:14: error: 'LEN_ARRAY' undeclared (first use in this function)
   65 |  char buffer[LEN_ARRAY];
      |              ^~~~~~~~~
..\src\validation.c:65:14: note: each undeclared identifier is reported only once for each function it appears in
..\src\validation.c:65:7: warning: unused variable 'buffer' [-Wunused-variable]
   65 |  char buffer[LEN_ARRAY];
      |       ^~~~~~
..\src\validation.c: In function 'getFloat':
..\src\validation.c:98:14: error: 'LEN_ARRAY' undeclared (first use in this function)
   98 |  char buffer[LEN_ARRAY];
      |              ^~~~~~~~~
..\src\validation.c:98:7: warning: unused variable 'buffer' [-Wunused-variable]
   98 |  char buffer[LEN_ARRAY];
      |       ^~~~~~
15:47:13 **** Incremental Build of configuration Debug for project claseStruct ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\claseStruct.o" "..\\src\\claseStruct.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\validation.o" "..\\src\\validation.c" 
gcc -o claseStruct "src\\claseStruct.o" "src\\utn.o" "src\\validation.o" 
Info: Nothing to build for claseStruct
15:48:14 **** Incremental Build of configuration Debug for project claseStruct ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\claseStruct.o" "..\\src\\claseStruct.c" 
gcc -o claseStruct "src\\claseStruct.o" "src\\utn.o" "src\\validation.o" 
c:/mingw/bin/../lib/gcc/mingw32/9.2.0/../../../../mingw32/bin/ld.exe: cannot open output file claseStruct.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
15:48:16 **** Incremental Build of configuration Debug for project claseStruct ****
Info: Internal Builder is used for build
gcc -o claseStruct "src\\claseStruct.o" "src\\utn.o" "src\\validation.o" 
Info: Nothing to build for claseStruct
15:50:30 **** Incremental Build of configuration Debug for project claseStruct ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\validation.o" "..\\src\\validation.c" 
..\src\validation.c: In function 'getInt':
..\src\validation.c:65:14: error: 'LEN_ARRAY' undeclared (first use in this function)
   65 |  char buffer[LEN_ARRAY];
      |              ^~~~~~~~~
..\src\validation.c:65:14: note: each undeclared identifier is reported only once for each function it appears in
..\src\validation.c:65:7: warning: unused variable 'buffer' [-Wunused-variable]
   65 |  char buffer[LEN_ARRAY];
      |       ^~~~~~
..\src\validation.c: In function 'getFloat':
..\src\validation.c:98:14: error: 'LEN_ARRAY' undeclared (first use in this function)
   98 |  char buffer[LEN_ARRAY];
      |              ^~~~~~~~~
..\src\validation.c:98:7: warning: unused variable 'buffer' [-Wunused-variable]
   98 |  char buffer[LEN_ARRAY];
      |       ^~~~~~
15:51:07 **** Incremental Build of configuration Debug for project claseStruct ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\utn.o" "..\\src\\utn.c" 
..\src\utn.c: In function 'cargarArrayInt':
..\src\utn.c:82:6: warning: implicit declaration of function 'getNumber'; did you mean 'isNumber'? [-Wimplicit-function-declaration]
   82 |   if(getNumber(&buffer,"Ingrese un número\n","ERROR\n",1,115,2))
      |      ^~~~~~~~~
      |      isNumber
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\claseStruct.o" "..\\src\\claseStruct.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\validation.o" "..\\src\\validation.c" 
gcc -o claseStruct "src\\claseStruct.o" "src\\utn.o" "src\\validation.o" 
c:/mingw/bin/../lib/gcc/mingw32/9.2.0/../../../../mingw32/bin/ld.exe: cannot open output file claseStruct.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
15:51:11 **** Incremental Build of configuration Debug for project claseStruct ****
Info: Internal Builder is used for build
gcc -o claseStruct "src\\claseStruct.o" "src\\utn.o" "src\\validation.o" 
Info: Nothing to build for claseStruct
Info: Nothing to build for claseStruct
